--- a/platforms/browser/www/agenda.html
+++ b/platforms/browser/www/agenda.html
@@ -269,7 +269,7 @@
                  </div>
                  <hr/>
 
-                 <p class="buttons-row btn_gropo_opt">
+                <p class="buttons-row btn_gropo_opt">
                   <a href="#" class="button button-raised button-fill color-green">Editar</a>
                   <a href="#" class="button button-raised button-fill color-red">Deletar</a>                  
                 </p>
@@ -446,6 +446,14 @@
                         <div class="item-inner">
                           
                           <div class="item-title">Adicionar Evento</div>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" id="atualizar_agenda" class="item-link item-content">
+                        
+                        <div class="item-inner">
+                          <div class="item-title">Atualizar</div>                          
                         </div>
                       </a>
                     </li>
